--- a/styles/globals.css
+++ b/styles/globals.css
@@ -268,3 +268,41 @@ input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
   absolute w-[40px] h-[35px] rounded-[4px] bg-mainBlack top-[50%] left-[50%] translate-y-[10px] translate-x-[-50%] z-[2] flex
   justify-center items-center cursor-pointer opacity-0 duration-300 group-hover:translate-y-[-50%] group-hover:opacity-100
 }
+
+
+.lds-facebook {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-facebook div {
+  display: inline-block;
+  position: absolute;
+  left: 8px;
+  width: 16px;
+  background: #fff;
+  animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+}
+.lds-facebook div:nth-child(1) {
+  left: 8px;
+  animation-delay: -0.24s;
+}
+.lds-facebook div:nth-child(2) {
+  left: 32px;
+  animation-delay: -0.12s;
+}
+.lds-facebook div:nth-child(3) {
+  left: 56px;
+  animation-delay: 0;
+}
+@keyframes lds-facebook {
+  0% {
+    top: 8px;
+    height: 64px;
+  }
+  50%, 100% {
+    top: 24px;
+    height: 32px;
+  }
+}
